# PromptLab

./: .env.example  .gitignore  README.md  captioning_utils.py  main.py  prompts_lib.py  pyproject.toml
json_templates_in/: allurging_woman.json  american_girl.json  ana_de_arma.json  analog_mirror.json  asia_duo_woman.json  atletic_woman.json  attract_asian.json  beach_portrait.json  black_bob.json  blue_swimming.json  blue_winter.json  breaking_internet.json  bugatti_woman.json  candid_outdoor.json  cartoon_woman.json  closeup.json  cool_plants.json  curvy_woman.json  cyber_woman.json  domestic_woman.json  east_asian.json  edgy_woman.json  editorial_fashion.json  fitness_woman.json  gaming_woman.json  ginger_blonde.json  glamorous_western.json  greek_paint.json  gum_woman.json  hotel_woman.json  inside_car.json  japan_secretary.json  just_confidence.json  lazy_woman.json  luxurious_bathroom.json  luxury_aesthetic.json  luxury_woman_car.json  marmor_look.json  mini_dress.json  mirror_selfie_bedroom.json  (+34 more)
templates/: allurgingwoman.html  americangirl.html  anadearma.html  analogmirror.html  asiaduowoman.html  atleticwoman.html  attractasian.html  beachportrait.html  blackbob.html  blueswimming.html  bluewinter.html  breakinginternet.html  bugattiwoman.html  candidoutdoor.html  caption_to_prompt.html  cartoonwoman.html  closeup.html  coolplants.html  curvywoman.html  cyberwoman.html  domesticwoman.html  eastasian.html  edgywoman.html  editorialfashion.html  fitnesswoman.html  gallery.html  gamingwoman.html  gingerwoman.html  glamorouswestern.html  greekpaint.html  (+48 more)
